--- a/myblog/blog/templates/blog/blog_detail.html
+++ b/myblog/blog/templates/blog/blog_detail.html
@@ -1,19 +1,29 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {# 页面标题 #}
 {% block title %}
     {{ blog.title }}
 {% endblock %}
 
+{% block nav_blog_active %}active{% endblock %}
+
+{% block header_extends %}
+    <link rel="stylesheet" href="{% static 'blog/css/blog.css' %}">
+{% endblock %}
 {# 页面内容 #}
 {% block content %}
-    <h3>{{ blog.title }}</h3>
-    <p>作者：{{ blog.author }}</p>
-    <p>发表日期：{{ blog.created_time|date:'Y-m-d H:m:s' }}</p>
-    <p>分类：
-        <a href="{% url 'blogs_with_type' blog.blog_type.pk %}">
-            {{ blog.blog_type }}
-        </a>
-    </p>
-    <p>{{ blog.content }}</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1">
+                <h3>{{ blog.title }}</h3>
+                <ul class="blog-info-description">
+                    <li>作者：{{ blog.author }}</li>
+                    <li>发表日期：{{ blog.created_time|date:'Y-m-d H:m:s' }}</li>
+                    <li>分类：<a href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type }}</a></li>
+                </ul>
+                <div class="blog-content">{{ blog.content }}</div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
