--- a/myblog/blog/templates/blog/blogs_with_type.html
+++ b/myblog/blog/templates/blog/blogs_with_type.html
@@ -1,15 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'blog/blog_list.html' %}
 
 {# 页面标题 #}
 {% block title %}
     {{ blog_type.type_name }}
 {% endblock %}
 
-{# 页面内容 #}
-{% block content %}
-    {{ blog_type.type_name }}
-    {% for blog in blogs %}
-        <h3>{{ blog.title }}</h3>
-        <p>{{ blog.content|truncatechars:30 }}</p>
-    {% endfor %}
+{% block blog_list_title %}
+    分类：{{ blog_type.type_name }}（一共有{{ blogs|length }}篇博客）
+    <a href="{% url 'blog_list' %}">查看全部博客</a>
 {% endblock %}
