--- a/myblog/blog/templates/blog/blog_detail.html
+++ b/myblog/blog/templates/blog/blog_detail.html
@@ -23,6 +23,14 @@
                     <li>分类：<a href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type }}</a></li>
                 </ul>
                 <div class="blog-content">{{ blog.content }}</div>
+                <div class="blog-more">
+                    {% if previous_blog %}
+                        <p>上一篇：<a href="{% url 'blog_detail' previous_blog.pk %}">{{ previous_blog.title }}</a></p>
+                    {% endif %}
+                    {% if next_blog %}
+                        <p>下一篇：<a href="{% url 'blog_detail' next_blog.pk %}">{{ next_blog.title }}</a></p>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
