--- a/myblog/blog/templates/blog/blog_list.html
+++ b/myblog/blog/templates/blog/blog_list.html
@@ -30,7 +30,7 @@
                                 <p class="blog-info">
                                     <span class="glyphicon glyphicon-tags tag-type"></span><a class="blog-type" href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type.type_name }}</a>
                                     <span class="glyphicon glyphicon-time tag-type"></span>{{ blog.created_time|date:'Y-m-d H:m:s' }}
-                                    &nbsp;&nbsp;&nbsp;阅读 ({{ blog.read_num }})
+                                    &nbsp;&nbsp;&nbsp;阅读 ({{ blog.get_read_num }})
                                 </p>
                                 <p>{{ blog.content|striptags|truncatechars:90 }}</p>
                             </div>
