--- a/myblog/templates/home.html
+++ b/myblog/templates/home.html
@@ -16,6 +16,66 @@
     <h3 class="home-content">欢迎访问我的网站，随便看</h3>
     <!-- 图表容器 DOM -->
     <div id="container"></div>
+    <div class="hot-data">
+        <!-- 今天24小时内的热门博客 -->
+        <h3>今天热门博客</h3>
+        <ul>
+            {% for hot_data in today_hot_data %}
+                <li>
+                    <a href="{% url 'blog_detail' hot_data.content_object.pk %}">
+                        {{ hot_data.content_object.title }}
+                    </a> ({{ hot_data.read_num }})
+                </li>
+            {% empty %}
+                <li>今天暂时没有热门博客</li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="hot-data">
+        <!-- 昨天24小时内的热门博客 -->
+        <h3>昨天热门博客</h3>
+        <ul>
+            {% for hot_data in yesterday_hot_data %}
+                <li>
+                    <a href="{% url 'blog_detail' hot_data.content_object.pk %}">
+                        {{ hot_data.content_object.title }}
+                    </a> ({{ hot_data.read_num }})
+                </li>
+            {% empty %}
+                <li>昨天没有热门博客</li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="hot-data">
+        <!-- 7天内的热门博客 -->
+        <h3>7天热门博客</h3>
+        <ul>
+            {% for hot_blog in seven_days_hot_blogs %}
+                <li>
+                    <a href="{% url 'blog_detail' hot_blog.id %}">
+                        {{ hot_blog.title }}
+                    </a> ({{ hot_blog.read_num_sum }})
+                </li>
+            {% empty %}
+                <li>昨天没有热门博客</li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="hot-data">
+        <!-- 30天内的热门博客 -->
+        <h3>30天热门博客</h3>
+        <ul>
+            {% for hot_blog in month_hot_blogs %}
+                <li>
+                    <a href="{% url 'blog_detail' hot_blog.id %}">
+                        {{ hot_blog.title }}
+                    </a> ({{ hot_blog.read_num_sum }})
+                </li>
+            {% empty %}
+                <li>昨天没有热门博客</li>
+            {% endfor %}
+        </ul>
+    </div>
     <script>
         //图标配置
         var options = {
