--- a/myblog/blog/static/blog/css/blog.css
+++ b/myblog/blog/static/blog/css/blog.css
@@ -29,3 +29,13 @@ ul.blog-info-description li {
 div.blog-content {
     text-indent: 2em;
 }
+div.comment-block {
+    margin-bottom: 10em;
+}
+div.comment-area {
+    margin-top: 2em;
+}
+h3.comment-area-title {
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 0.4em;
+}
