--- a/myblog/blog/templates/blog/blog_detail.html
+++ b/myblog/blog/templates/blog/blog_detail.html
@@ -10,6 +10,8 @@
 
 {% block header_extends %}
     <link rel="stylesheet" href="{% static 'blog/css/blog.css' %}">
+    <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
+    <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
 {% endblock %}
 {# 页面内容 #}
 {% block content %}
@@ -20,7 +22,7 @@
                 <ul class="blog-info-description">
                     <li>作者：{{ blog.author }}</li>
                     <li>分类：<a href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type }}</a></li>
-                    <li>发表日期：{{ blog.created_time|date:'Y-m-d H:m:s' }}</li>
+                    <li>发表日期：{{ blog.created_time|date:'Y-m-d H:i:s' }}</li>
                     <li>阅读 ({{ blog.get_read_num }})</li>
                 </ul>
                 <div class="blog-content">{{ blog.content|safe }}</div>
@@ -39,15 +41,18 @@
                 <div class="comment-area">
                     <h3 class="comment-area-title">提交评论</h3>
                     {% if user.is_authenticated %}
-                        <form action="{% url 'update_comment' %}" method="post" style="overflow: hidden">
-                            {% csrf_token %}
-                            <div class="form-group">
-                                <label for="comment_text">{{ user.username }}，欢迎评论~</label>
-                                <textarea name="text" id="comment_text" class="form-control" rows="6"></textarea>
+                        <form id="comment_form" action="{% url 'update_comment' %}" method="post" style="overflow: hidden">
+                            <label for="comment_text">{{ user.username }}，欢迎评论~</label>
+                            <div id="reply_content_container" style="display: none;">
+                                <p>回复：</p>
+                                <div id="reply_content"></div>
                             </div>
-                            <input type="hidden" name="object_id" value="{{ blog.pk }}">
-                            <input type="hidden" name="content_type" value="blog">
-                            <input type="submit" value="评论" class="btn btn-primary" style="float: right">
+                            {% csrf_token %}
+                            {% for field in comment_form %}
+                                {{ field }}
+                            {% endfor %}
+                            <span id="comment-error" class="text-danger pull-left"></span>
+                            <input type="submit" value="评论" class="btn btn-primary pull-right">
                         </form>
                     {% else %}
                         您尚未登录，登录之后方可评论~
@@ -58,17 +63,121 @@
                 </div>
                 <div class="comment-area">
                     <h3 class="comment-area-title">评论列表</h3>
-                    {% for comment in comments %}
-                        <div>
-                            {{ comment.user.username }}
-                            ({{ comment.comment_time|date:'Y-m-d H:m:s' }}):
-                            {{ comment.text }}
-                        </div>
-                    {% empty %}
-                        暂无评论
-                    {% endfor %}
+                    <div id="comment-list">
+                        {% for comment in comments %}
+                            <div id="root_{{ comment.pk }}" class="comment">
+                                <span>{{ comment.user.username }}</span>
+                                <span>({{ comment.comment_time|date:'Y-m-d H:i:s' }}):</span>
+                                <div id="comment_{{ comment.pk }}">
+                                    {{ comment.text|safe }}
+                                </div>
+                                <a href="javascript:reply({{ comment.pk }})">回复</a>
+
+                                {% for reply in comment.root_comment.all %}
+                                    <div class="reply">
+                                        <span>{{ reply.user.username }}</span>
+                                        <span>({{ reply.comment_time|date:'Y-m-d H:i:s' }})</span>
+                                        <span>回复</span>
+                                        <span>{{ reply.reply_to.username }}:</span>
+                                        <div id="comment_{{ reply.pk }}">
+                                            {{ reply.text|safe }}
+                                        </div>
+                                        <a href="javascript:reply({{ reply.pk }})">回复</a>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        {% empty %}
+                            <span id="no_comment">暂无评论</span>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+{% endblock %}
+{% block script_extends %}
+    <script type="text/javascript">
+        $("#comment_form").submit(function () {
+            // 清除错误信息
+            $("#comment-error").text('');
+            // 判断是否为空
+            if(CKEDITOR.instances['id_text'].document.getBody().getText().trim() == '') {
+                $("#comment-error").text('评论内容不能为空！');
+                return false;
+            }
+
+            // 更新数据到textarea里面
+            CKEDITOR.instances['id_text'].updateElement();
+
+            // 异步提交
+            $.ajax({
+                url: "{% url 'update_comment' %}",
+                type: 'POST',
+                data: $(this).serialize(),
+                cache: false,
+                success: function (data) {
+                    console.log(data);
+                    if(data['status'] == 'SUCCESS') {
+                        // 插入数据
+                        if ($("#reply_comment_id").val() == '0') {
+                            // 插入评论
+                            var comment_html = '<div id="root_' + data['pk'] + '" class="comment">' +
+                                                '<span>' + data['username'] + '</span>' +
+                                                '<span>(' + data['comment_time'] + '):</span>' +
+                                                '<div id="comment_' + data['pk'] + '">' +
+                                                    data['text'] +
+                                                '</div>' +
+                                                '<a href="javascript:reply(' + data['pk'] + ')">回复</a>'+
+                                            '</div>';
+                             $("#comment-list").prepend(comment_html);
+                        } else {
+                            // 插入回复
+                            var reply_html = '<div class="reply">' +
+                                                '<span>' + data['username'] + '</span>' +
+                                                '<span>(' + data['comment_time'] + ')</span>' +
+                                                '<span>回复</span>'+
+                                                '<span>' + data['reply_to'] + ':</span>' +
+                                                '<div id="comment_' + data['pk'] + '">' +
+                                                    data['text'] +
+                                                '</div>'+
+                                                '<a href="javascript:reply(' + data['pk'] + ')">回复</a>' +
+                                            '</div>';
+                            $("#root_" + data['root_pk']).append(reply_html);
+                        }
+                        // 清空编辑框的内容
+                        CKEDITOR.instances['id_text'].setData('');
+                        $("#reply_content_container").hide();
+                        $("#reply_comment_id").val('0');
+                        $("#no_comment").remove();
+                    } else {
+                        // 显示错误信息
+                        $("#comment-error").prepend(data['message'])
+                    }
+                },
+                error: function (xhr) {
+                    console.log(xhr);
+                }
+            });
+            return false;
+        })
+        function reply(reply_comment_id) {
+            // 设置隐藏的被回复评论的ID
+            $("#reply_comment_id").val(reply_comment_id);
+            // 在评论框上层显示被回复的内容
+            var html = $("#comment_" + reply_comment_id).html();
+            $("#reply_content").html(html);
+            // 显示被回复的内容
+            $("#reply_content_container").show();
+            // 点击回复300毫秒后页面回调到评论框
+            $("html").animate(
+                {
+                    scrollTop: $("#comment_form").offset().top - 60
+                },
+                300,
+                function () {
+                    CKEDITOR.instances['id_text'].focus();
+                }
+            );
+        }
+    </script>
 {% endblock %}
