--- a/myblog/blog/templates/blog/blog_list.html
+++ b/myblog/blog/templates/blog/blog_list.html
@@ -29,7 +29,7 @@
                                 </h3>
                                 <p class="blog-info">
                                     <span class="glyphicon glyphicon-tags tag-type"></span><a class="blog-type" href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type.type_name }}</a>
-                                    <span class="glyphicon glyphicon-time tag-type"></span>{{ blog.created_time|date:'Y-m-d H:m:s' }}
+                                    <span class="glyphicon glyphicon-time tag-type"></span>{{ blog.created_time|date:'Y-m-d H:i:s' }}
                                     &nbsp;&nbsp;&nbsp;阅读 ({{ blog.get_read_num }})
                                 </p>
                                 <p>{{ blog.content|striptags|truncatechars:90 }}</p>
