--- a/myblog/blog/templates/blog/blog_list.html
+++ b/myblog/blog/templates/blog/blog_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
+{% load comment_tags %}
+{% load read_tags %}
 
 {# 页面标题 #}
 {% block title %}
@@ -28,9 +30,11 @@
                                     <a href="{% url 'blog_detail' blog.pk %}">{{ blog.title }}</a>
                                 </h3>
                                 <p class="blog-info">
-                                    <span class="glyphicon glyphicon-tags tag-type"></span><a class="blog-type" href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type.type_name }}</a>
+                                    <span class="glyphicon glyphicon-tags tag-type"></span>
+                                    <a class="blog-type" href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type.type_name }}</a>
                                     <span class="glyphicon glyphicon-time tag-type"></span>{{ blog.created_time|date:'Y-m-d H:i:s' }}
-                                    &nbsp;&nbsp;&nbsp;阅读 ({{ blog.get_read_num }})
+                                    &nbsp;&nbsp;&nbsp;阅读 ({% get_read_num blog %})
+                                    &nbsp;&nbsp;&nbsp;评论 ({% get_comment_count blog %})
                                 </p>
                                 <p>{{ blog.content|striptags|truncatechars:90 }}</p>
                             </div>
