--- a/myblog/blog/templates/blog/blog_detail.html
+++ b/myblog/blog/templates/blog/blog_detail.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 {% load comment_tags %}
 {% load read_tags %}
+{% load like_tags %}
 
 {# 页面标题 #}
 {% block title %}
@@ -29,6 +30,11 @@
                     <li>评论 ({% get_comment_count blog %})</li>
                 </ul>
                 <div class="blog-content">{{ blog.content|safe }}</div>
+                <div class="like" onclick="likeChange(this, '{% get_content_type blog %}', {{ blog.pk }})">
+                    <span class="glyphicon glyphicon-thumbs-up {% get_like_status blog %}"></span>
+                    <span class="like-num">{% get_like_count blog %}</span>
+                    <span>喜欢</span>
+                </div>
                 <div class="blog-more">
                     {% if previous_blog %}
                         <p>上一篇：<a href="{% url 'blog_detail' previous_blog.pk %}">{{ previous_blog.title }}</a></p>
@@ -76,6 +82,11 @@
                                 <div id="comment_{{ comment.pk }}">
                                     {{ comment.text|safe }}
                                 </div>
+                                <div class="like" onclick="likeChange(this, '{% get_content_type comment %}', {{ comment.pk }})">
+                                    <span class="glyphicon glyphicon-thumbs-up {% get_like_status comment %}"></span>
+                                    <span class="like-num">{% get_like_count comment %}</span>
+                                    <span>喜欢</span>
+                                </div>
                                 <a href="javascript:reply({{ comment.pk }})">回复</a>
 
                                 {% for reply in comment.root_comment.all %}
@@ -86,6 +97,11 @@
                                         <span>{{ reply.reply_to.username }}:</span>
                                         <div id="comment_{{ reply.pk }}">
                                             {{ reply.text|safe }}
+                                        </div>
+                                        <div class="like" onclick="likeChange(this, '{% get_content_type reply %}', {{ reply.pk }})">
+                                            <span class="glyphicon glyphicon-thumbs-up {% get_like_status reply %}"></span>
+                                            <span class="like-num">{% get_like_count reply %}</span>
+                                            <span>喜欢</span>
                                         </div>
                                         <a href="javascript:reply({{ reply.pk }})">回复</a>
                                     </div>
@@ -199,6 +215,40 @@
             var minute = numFormat(datetime.getMinutes());
             var second = numFormat(datetime.getSeconds());
             return year + '-' + month + '-' + day + '-' + ' ' + hour + ':' + minute + ':' + second;
+        }
+        // 点赞数增减
+        function likeChange(obj, content_type, object_id) {
+            var is_like = obj.getElementsByClassName('active').length == 0;
+            $.ajax({
+                url: "{% url 'like_change' %}",
+                type: 'GET',
+                data: {
+                    content_type: content_type,
+                    object_id: object_id,
+                    is_like: is_like
+                },
+                cache: false,
+                success: function (data) {
+                    console.log(data)
+                    if (data['status'] == 'SUCCESS') {
+                        // 更新点赞状态
+                        var element = $(obj.getElementsByClassName('glyphicon'));
+                        if (is_like) {
+                            element.addClass('active');
+                        } else {
+                            element.removeClass('active');
+                        }
+                        //更新点赞数量
+                        var like_num = $(obj.getElementsByClassName('like-num'));
+                        like_num.text(data['like_num'])
+                    } else {
+                        alert(data['message'])
+                    }
+                },
+                error: function (xhr) {
+                    console.log(xhr)
+                }
+            });
         }
     </script>
 {% endblock %}
