--- a/myblog/blog/templates/blog/blog_list.html
+++ b/myblog/blog/templates/blog/blog_list.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 {% load comment_tags %}
 {% load read_tags %}
+{% load like_tags %}
 
 {# 页面标题 #}
 {% block title %}
@@ -35,6 +36,7 @@
                                     <span class="glyphicon glyphicon-time tag-type"></span>{{ blog.created_time|date:'Y-m-d H:i:s' }}
                                     &nbsp;&nbsp;&nbsp;阅读 ({% get_read_num blog %})
                                     &nbsp;&nbsp;&nbsp;评论 ({% get_comment_count blog %})
+                                    &nbsp;&nbsp;&nbsp;点赞 ({% get_like_count blog %})
                                 </p>
                                 <p>{{ blog.content|striptags|truncatechars:90 }}</p>
                             </div>
