--- a/myblog/blog/templates/blog/blog_detail.html
+++ b/myblog/blog/templates/blog/blog_detail.html
@@ -85,7 +85,6 @@
                                 <div class="like" onclick="likeChange(this, '{% get_content_type comment %}', {{ comment.pk }})">
                                     <span class="glyphicon glyphicon-thumbs-up {% get_like_status comment %}"></span>
                                     <span class="like-num">{% get_like_count comment %}</span>
-                                    <span>喜欢</span>
                                 </div>
                                 <a href="javascript:reply({{ comment.pk }})">回复</a>
 
@@ -101,7 +100,6 @@
                                         <div class="like" onclick="likeChange(this, '{% get_content_type reply %}', {{ reply.pk }})">
                                             <span class="glyphicon glyphicon-thumbs-up {% get_like_status reply %}"></span>
                                             <span class="like-num">{% get_like_count reply %}</span>
-                                            <span>喜欢</span>
                                         </div>
                                         <a href="javascript:reply({{ reply.pk }})">回复</a>
                                     </div>
@@ -118,6 +116,13 @@
 {% endblock %}
 {% block script_extends %}
     <script type="text/javascript">
+        String.prototype.format = function () {
+          var str = this;
+          for (var i=0; i < arguments.length; i++) {
+              var str = str.replace(new RegExp('\\{' + i + '\\}', 'g'), arguments[i])
+          }
+          return str
+        };
         function reply(reply_comment_id) {
             // 设置隐藏的被回复评论的ID
             $("#reply_comment_id").val(reply_comment_id);
@@ -161,27 +166,34 @@
                         // 插入数据
                         if ($("#reply_comment_id").val() == '0') {
                             // 插入评论
-                            var comment_html = '<div id="root_' + data['pk'] + '" class="comment">' +
-                                                '<span>' + data['username'] + '</span>' +
-                                                '<span>(' + timeFormat(data['comment_time']) + '):</span>' +
-                                                '<div id="comment_' + data['pk'] + '">' +
-                                                    data['text'] +
-                                                '</div>' +
-                                                '<a href="javascript:reply(' + data['pk'] + ')">回复</a>'+
-                                            '</div>';
-                             $("#comment-list").prepend(comment_html);
+                            var comment_html = '<div id="root_{0}" class="comment">' +
+                                                    '<span>{1}</span>' +
+                                                    '<span>({2}):</span>' +
+                                                    '<div id="comment_{0}">{3}</div>' +
+                                                    '<div class="like" onclick="likeChange(this, \'{4}\', {0})">' +
+                                                        '<span class="glyphicon glyphicon-thumbs-up"></span> ' +
+                                                        '<span class="like-num">0</span>' +
+                                                    '</div>' +
+                                                    '<a href="javascript:reply({0})">回复</a>' +
+                                                '</div>';
+
+                            comment_html = comment_html.format(data['pk'], data['username'], timeFormat(data['comment_time']), data['text'], data['content_type']);
+                            $("#comment-list").prepend(comment_html);
                         } else {
                             // 插入回复
                             var reply_html = '<div class="reply">' +
-                                                '<span>' + data['username'] + '</span>' +
-                                                '<span>(' + timeFormat(data['comment_time']) + ')</span>' +
-                                                '<span>回复</span>'+
-                                                '<span>' + data['reply_to'] + ':</span>' +
-                                                '<div id="comment_' + data['pk'] + '">' +
-                                                    data['text'] +
-                                                '</div>'+
-                                                '<a href="javascript:reply(' + data['pk'] + ')">回复</a>' +
+                                                '<span>{1}</span>' +
+                                                '<span>({2})</span>' +
+                                                '<span>回复</span>' +
+                                                '<span>{3}:</span>' +
+                                                '<div id="comment_{0}">{4}</div>' +
+                                                '<div class="like" onclick="likeChange(this, \'{5}\', {0})">' +
+                                                    '<span class="glyphicon glyphicon-thumbs-up"></span> ' +
+                                                    '<span class="like-num">0</span>' +
+                                                '</div>' +
+                                                '<a href="javascript:reply({0})">回复</a>' +
                                             '</div>';
+                            reply_html = reply_html.format(data['pk'], data['username'], timeFormat(data['comment_time']), data['reply_to'], data['text'], data['content_type']);
                             $("#root_" + data['root_pk']).append(reply_html);
                         }
                         // 清空编辑框的内容
@@ -242,7 +254,11 @@
                         var like_num = $(obj.getElementsByClassName('like-num'));
                         like_num.text(data['like_num'])
                     } else {
-                        alert(data['message'])
+                        if (data['code'] == '4000') {
+                            $("#login_modal").modal('show')
+                        } else {
+                            alert(data['message'])
+                        }
                     }
                 },
                 error: function (xhr) {
