修改密码，邮件通知评论或回复

--- a/myblog/blog/static/blog/css/blog.css
+++ b/myblog/blog/static/blog/css/blog.css
@@ -75,4 +75,9 @@ div.like {
 div.like .active {
     color: #f22;
 }
-
+div.comment-text {
+    margin-left: 1em;
+}
+span.reply-color {
+    color: green;
+}
