--- a/myblog/blog/templates/blog/blog_detail.html
+++ b/myblog/blog/templates/blog/blog_detail.html
@@ -79,7 +79,7 @@
                             <div id="root_{{ comment.pk }}" class="comment">
                                 <span>{{ comment.user.get_nickname_or_username }}</span>
                                 <span>({{ comment.comment_time|date:'Y-m-d H:i:s' }}):</span>
-                                <div id="comment_{{ comment.pk }}">
+                                <div id="comment_{{ comment.pk }}" class="comment-text">
                                     {{ comment.text|safe }}
                                 </div>
                                 <div class="like" onclick="likeChange(this, '{% get_content_type comment %}', {{ comment.pk }})">
@@ -92,9 +92,9 @@
                                     <div class="reply">
                                         <span>{{ reply.user.get_nickname_or_username }}</span>
                                         <span>({{ reply.comment_time|date:'Y-m-d H:i:s' }})</span>
-                                        <span>回复</span>
+                                        <span class="reply-color">回复</span>
                                         <span>{{ reply.reply_to.get_nickname_or_username }}:</span>
-                                        <div id="comment_{{ reply.pk }}">
+                                        <div id="comment_{{ reply.pk }}" class="comment-text">
                                             {{ reply.text|safe }}
                                         </div>
                                         <div class="like" onclick="likeChange(this, '{% get_content_type reply %}', {{ reply.pk }})">
@@ -167,9 +167,9 @@
                         if ($("#reply_comment_id").val() == '0') {
                             // 插入评论
                             var comment_html = '<div id="root_{0}" class="comment">' +
-                                                    '<span>{1}</span>' +
+                                                    '<span>{1}</span> ' +
                                                     '<span>({2}):</span>' +
-                                                    '<div id="comment_{0}">{3}</div>' +
+                                                    '<div id="comment_{0}" class="comment-text">{3}</div>' +
                                                     '<div class="like" onclick="likeChange(this, \'{4}\', {0})">' +
                                                         '<span class="glyphicon glyphicon-thumbs-up"></span> ' +
                                                         '<span class="like-num">0</span>' +
@@ -182,11 +182,11 @@
                         } else {
                             // 插入回复
                             var reply_html = '<div class="reply">' +
-                                                '<span>{1}</span>' +
-                                                '<span>({2})</span>' +
-                                                '<span>回复</span>' +
+                                                '<span>{1}</span> ' +
+                                                '<span>({2})</span> ' +
+                                                '<span class="reply-color">回复</span> ' +
                                                 '<span>{3}:</span>' +
-                                                '<div id="comment_{0}">{4}</div>' +
+                                                '<div id="comment_{0}" class="comment-text">{4}</div>' +
                                                 '<div class="like" onclick="likeChange(this, \'{5}\', {0})">' +
                                                     '<span class="glyphicon glyphicon-thumbs-up"></span> ' +
                                                     '<span class="like-num">0</span>' +
@@ -226,7 +226,7 @@
             var hour = numFormat(datetime.getHours());
             var minute = numFormat(datetime.getMinutes());
             var second = numFormat(datetime.getSeconds());
-            return year + '-' + month + '-' + day + '-' + ' ' + hour + ':' + minute + ':' + second;
+            return year + '-' + month + '-' + day + ' ' + hour + ':' + minute + ':' + second;
         }
         // 点赞数增减
         function likeChange(obj, content_type, object_id) {
