--- a/myblog/user/templates/user/register.html
+++ b/myblog/user/templates/user/register.html
@@ -19,7 +19,9 @@
                                     {{ field }}
                                     <p class="text-danger">{{ field.errors.as_text }}</p>
                                 {% endfor %}
-                                <span class="pull-left text-danger">{{ login_form.non_field_errors }}</span>
+                                <span class="text-danger">{{ login_form.non_field_errors }}</span>
+                                <div class="cleanfix"></div>
+                                <button id="send_code" class="btn btn-primary pull-left">发送验证码</button>
                                 <input type="submit" value="注册" class="btn btn-primary pull-right">
                             </form>
                         </div>
@@ -32,4 +34,47 @@
             </div>
         </div>
     </div>
+{% endblock %}
+{% block script_extends %}
+    <script type="text/javascript">
+        $("#send_code").click(function () {
+            var email = $("#id_email").val();
+            if (email == '') {
+                $("#error_tip").text('*邮箱不能为空')
+            }
+
+            // 发送验证码
+            $.ajax({
+                url: "{% url 'send_verification_code' %}",
+                type: 'GET',
+                data: {
+                    'email': email,
+                    'send_for': 'register_code'
+                },
+                cache: false,
+                success: function (data) {
+                    if (data['status'] == 'ERROR') {
+                        alert(data['status'])
+                    }
+                }
+            });
+
+            // 把按钮变灰
+            $(this).addClass('disabled');
+            $(this).attr('disabled', true);
+            var time = 30;
+            $(this).text(time + 's');
+            var interval = setInterval(() => {
+                if (time <= 0) {
+                    clearInterval(interval)
+                    $(this).removeClass('disabled');
+                    $(this).attr('disabled', false);
+                    $(this).text('发送验证码');
+                    return false
+                }
+                time --;
+                $(this).text(time + 's');
+            }, 1000);
+        });
+    </script>
 {% endblock %}
